fixed button visiblity

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ h1 {
 
 #winner {
     visibility: hidden;
-    background: #f0687f;
+    background: #f0687f98;
     color: white;
     width: 100%;
     font-size: xx-large;
@@ -135,7 +135,6 @@ h1 {
     transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
     will-change: transform;
     position: absolute;
-    margin-top: 100px;
     font-size: larger;
 }
 
